연락하기섹션수정정

--- a/index.html
+++ b/index.html
@@ -228,46 +228,50 @@
             
             <div class="contact-content">
                 <div class="contact-info">
-                    <div class="contact-item">
-                        <i class="fas fa-envelope"></i>
-                        <div>
-                            <h4>이메일</h4>
-                            <p>herjy6372@gmail.com</p>
+                    <div class="contact-row">
+                        <div class="contact-item">
+                            <i class="fas fa-envelope"></i>
+                            <div>
+                                <h4>이메일</h4>
+                                <p>herjy6372@gmail.com</p>
+                            </div>
+                        </div>
+                        <div class="contact-item">
+                            <i class="fas fa-phone"></i>
+                            <div>
+                                <h4>전화번호</h4>
+                                <p>+82 10-7176-6372</p>
+                            </div>
+                        </div>
+                        <div class="contact-item">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <div>
+                                <h4>위치</h4>
+                                <p>경상북도 김천, 대한민국</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="contact-item">
-                        <i class="fas fa-phone"></i>
-                        <div>
-                            <h4>전화번호</h4>
-                            <p>+82 10-7176-6372</p>
+                    <div class="contact-row">
+                        <div class="contact-item">
+                            <i class="fab fa-blogger"></i>
+                            <div>
+                                <h4>네이버 블로그</h4>
+                                <p><a href="https://blog.naver.com/terablack" target="_blank" class="contact-link">blog.naver.com/terablack</a></p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="contact-item">
-                        <i class="fas fa-map-marker-alt"></i>
-                        <div>
-                            <h4>위치</h4>
-                            <p>경상북도 김천, 대한민국</p>
+                        <div class="contact-item">
+                            <i class="fab fa-twitter"></i>
+                            <div>
+                                <h4>X (트위터)</h4>
+                                <p><a href="https://x.com/herjy6372" target="_blank" class="contact-link">x.com/herjy6372</a></p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="contact-item">
-                        <i class="fab fa-blogger"></i>
-                        <div>
-                            <h4>네이버 블로그</h4>
-                            <p><a href="https://blog.naver.com/terablack" target="_blank" class="contact-link">blog.naver.com/terablack</a></p>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <i class="fab fa-twitter"></i>
-                        <div>
-                            <h4>X (트위터)</h4>
-                            <p><a href="https://x.com/herjy6372" target="_blank" class="contact-link">x.com/herjy6372</a></p>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <i class="fas fa-users"></i>
-                        <div>
-                            <h4>삼성멤버스</h4>
-                            <p><a href="https://r1.community.samsung.com/t5/user/viewprofilepage/user-id/106148880" target="_blank" class="contact-link">TeraBlack 프로필</a></p>
+                        <div class="contact-item">
+                            <i class="fas fa-users"></i>
+                            <div>
+                                <h4>삼성멤버스</h4>
+                                <p><a href="https://r1.community.samsung.com/t5/user/viewprofilepage/user-id/106148880" target="_blank" class="contact-link">TeraBlack 프로필</a></p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -279,14 +283,9 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <div class="footer-content">
-                <p>&copy; 2024 Portfolio. All rights reserved.</p>
-                <div class="social-links">
-                    <a href="#" class="social-link"><i class="fab fa-github"></i></a>
-                    <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
-                    <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-                </div>
-            </div>
+        <div class="footer-content">
+            <p>&copy; 2024 Portfolio. All rights reserved.</p>
+        </div>
         </div>
     </footer>
 
