버튼수정정

--- a/index.html
+++ b/index.html
@@ -148,74 +148,13 @@
                         </div>
                         <div class="project-links">
                             <a href="#" class="project-link">
-                                <i class="fas fa-external-link-alt"></i>
-                                라이브 데모
-                            </a>
-                            <a href="#" class="project-link">
-                                <i class="fab fa-github"></i>
-                                GitHub
+                                <i class="fas fa-link"></i>
+                                URL 링크
                             </a>
                         </div>
                     </div>
                 </div>
 
-                <div class="project-card">
-                    <div class="project-image">
-                        <div class="project-img-placeholder">
-                            <i class="fas fa-shopping-cart"></i>
-                        </div>
-                    </div>
-                    <div class="project-content">
-                        <h3 class="project-title">Flutter E-Commerce 앱</h3>
-                        <p class="project-description">
-                            Flutter로 개발한 모바일 쇼핑 앱입니다. 결제 시스템과 상품 관리 기능을 포함합니다.
-                        </p>
-                        <div class="project-tech">
-                            <span class="tech-tag">Flutter</span>
-                            <span class="tech-tag">Provider</span>
-                            <span class="tech-tag">API</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="#" class="project-link">
-                                <i class="fas fa-external-link-alt"></i>
-                                라이브 데모
-                            </a>
-                            <a href="#" class="project-link">
-                                <i class="fab fa-github"></i>
-                                GitHub
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project-card">
-                    <div class="project-image">
-                        <div class="project-img-placeholder">
-                            <i class="fas fa-weather-sun"></i>
-                        </div>
-                    </div>
-                    <div class="project-content">
-                        <h3 class="project-title">Flutter 날씨 앱</h3>
-                        <p class="project-description">
-                            실시간 날씨 정보를 제공하는 Flutter 앱입니다. 위치 기반 서비스와 아름다운 애니메이션을 포함합니다.
-                        </p>
-                        <div class="project-tech">
-                            <span class="tech-tag">Flutter</span>
-                            <span class="tech-tag">Geolocation</span>
-                            <span class="tech-tag">Animation</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="#" class="project-link">
-                                <i class="fas fa-external-link-alt"></i>
-                                라이브 데모
-                            </a>
-                            <a href="#" class="project-link">
-                                <i class="fab fa-github"></i>
-                                GitHub
-                            </a>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
