--- a/index.html
+++ b/index.html
@@ -147,9 +147,13 @@
                             <span class="tech-tag">Dart</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">
-                                <i class="fas fa-link"></i>
-                                URL 링크
+                            <a href="mailto:herjy6372@gmail.com" class="project-link">
+                                <i class="fas fa-envelope"></i>
+                                이메일 보내기
+                            </a>
+                            <a href="sms:+82-10-7176-6372" class="project-link">
+                                <i class="fas fa-sms"></i>
+                                문자 보내기
                             </a>
                         </div>
                     </div>
