이미지수정정

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         </div>
                     </div>
                     <div class="project-content">
-                        <h3 class="project-title">Flutter Todo 앱</h3>
+                        <h3 class="project-title">리마인더 - 나의 할 일 앱</h3>
                         <p class="project-description">
                             Flutter와 Firebase를 활용한 개인 일정 관리 앱입니다. 실시간 동기화와 직관적인 UI를 제공합니다.
                         </p>
@@ -234,13 +234,12 @@
                     <button class="gallery-nav gallery-next" onclick="nextImage()">&#8250;</button>
                 </div>
                 <div class="gallery-thumbnails">
-                    <img src="image/1.jpg" alt="프로젝트 스크린샷 1" onclick="changeMainImage(this.src)">
-                    <img src="image/2-1.jpg" alt="프로젝트 스크린샷 2" onclick="changeMainImage(this.src)">
-                    <img src="image/2-2.jpg" alt="프로젝트 스크린샷 3" onclick="changeMainImage(this.src)">
-                    <img src="image/3.jpg" alt="프로젝트 스크린샷 4" onclick="changeMainImage(this.src)">
-                    <img src="image/4.jpg" alt="프로젝트 스크린샷 5" onclick="changeMainImage(this.src)">
-                    <img src="image/5.jpg" alt="프로젝트 스크린샷 6" onclick="changeMainImage(this.src)">
-                    <img src="image/6.jpg" alt="프로젝트 스크린샷 7" onclick="changeMainImage(this.src)">
+                    <img src="image/grade-info.png" alt="등급 안내 화면" onclick="changeMainImage(this.src)">
+                    <img src="image/coupon-register.png" alt="쿠폰 등록 화면" onclick="changeMainImage(this.src)">
+                    <img src="image/todo-list.png" alt="할 일 목록 화면" onclick="changeMainImage(this.src)">
+                    <img src="image/permission-guide.png" alt="권한 안내 화면" onclick="changeMainImage(this.src)">
+                    <img src="image/login-screen.png" alt="로그인 화면" onclick="changeMainImage(this.src)">
+                    <img src="image/app-info.png" alt="앱 정보 화면" onclick="changeMainImage(this.src)">
                 </div>
             </div>
         </div>
