이미지수정3

--- a/index.html
+++ b/index.html
@@ -234,12 +234,13 @@
                     <button class="gallery-nav gallery-next" onclick="nextImage()">&#8250;</button>
                 </div>
                 <div class="gallery-thumbnails">
-                    <img src="image/grade-info.png" alt="등급 안내 화면" onclick="changeMainImage(this.src)">
-                    <img src="image/coupon-register.png" alt="쿠폰 등록 화면" onclick="changeMainImage(this.src)">
-                    <img src="image/todo-list.png" alt="할 일 목록 화면" onclick="changeMainImage(this.src)">
-                    <img src="image/permission-guide.png" alt="권한 안내 화면" onclick="changeMainImage(this.src)">
-                    <img src="image/login-screen.png" alt="로그인 화면" onclick="changeMainImage(this.src)">
-                    <img src="image/app-info.png" alt="앱 정보 화면" onclick="changeMainImage(this.src)">
+                    <img src="image/1.jpg" alt="이미지 1" onclick="changeMainImage(this.src)">
+                    <img src="image/2.jpg" alt="이미지2" onclick="changeMainImage(this.src)">
+                    <img src="image/3.jpg" alt="이미지3" onclick="changeMainImage(this.src)">
+                    <img src="4.jpg" alt="이미지4" onclick="changeMainImage(this.src)">
+                    <img src="5.jpg" alt="이미지5" onclick="changeMainImage(this.src)">
+                    <img src="6.jpg" alt="이미지6" onclick="changeMainImage(this.src)">
+                    <img src="7.jpg" alt="이미지7" onclick="changeMainImage(this.src)">
                 </div>
             </div>
         </div>
