이미지수정4

--- a/index.html
+++ b/index.html
@@ -237,10 +237,10 @@
                     <img src="image/1.jpg" alt="이미지 1" onclick="changeMainImage(this.src)">
                     <img src="image/2.jpg" alt="이미지2" onclick="changeMainImage(this.src)">
                     <img src="image/3.jpg" alt="이미지3" onclick="changeMainImage(this.src)">
-                    <img src="4.jpg" alt="이미지4" onclick="changeMainImage(this.src)">
-                    <img src="5.jpg" alt="이미지5" onclick="changeMainImage(this.src)">
-                    <img src="6.jpg" alt="이미지6" onclick="changeMainImage(this.src)">
-                    <img src="7.jpg" alt="이미지7" onclick="changeMainImage(this.src)">
+                    <img src="image/4.jpg" alt="이미지4" onclick="changeMainImage(this.src)">
+                    <img src="image/5.jpg" alt="이미지5" onclick="changeMainImage(this.src)">
+                    <img src="image/6.jpg" alt="이미지6" onclick="changeMainImage(this.src)">
+                    <img src="image/7.jpg" alt="이미지7" onclick="changeMainImage(this.src)">
                 </div>
             </div>
         </div>
