이미지수정5

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             </div>
             <div class="gallery-container">
                 <div class="gallery-main">
-                    <img id="galleryMainImage" src="" alt="프로젝트 이미지">
+                    <img id="galleryMainImage" src="image/1.jpg" alt="프로젝트 이미지">
                     <button class="gallery-nav gallery-prev" onclick="previousImage()">&#8249;</button>
                     <button class="gallery-nav gallery-next" onclick="nextImage()">&#8250;</button>
                 </div>
