이미지수정7

--- a/index.html
+++ b/index.html
@@ -229,12 +229,10 @@
             </div>
             <div class="gallery-container">
                 <div class="gallery-main">
-                    <img id="galleryMainImage" src="image/0.jpg" alt="프로젝트 이미지">
-                    <button class="gallery-nav gallery-prev" onclick="previousImage()">&#8249;</button>
-                    <button class="gallery-nav gallery-next" onclick="nextImage()">&#8250;</button>
+                    <img id="galleryMainImage" src="image/0.jpg" alt="image">
                 </div>
                 <div class="gallery-thumbnails">
-                    <img src="image/1.jpg" alt="이미지 1" onclick="changeMainImage(this.src)">
+                    <img src="image/1.jpg" alt="이미지1" onclick="changeMainImage(this.src)">
                     <img src="image/2.jpg" alt="이미지2" onclick="changeMainImage(this.src)">
                     <img src="image/3.jpg" alt="이미지3" onclick="changeMainImage(this.src)">
                     <img src="image/4.jpg" alt="이미지4" onclick="changeMainImage(this.src)">
